--- a/pom.xml
+++ b/pom.xml
@@ -60,9 +60,19 @@
 			<artifactId>jaxb-api</artifactId>
 		</dependency>
 		<dependency>
-			<groupId>com.google.cloud</groupId>
-			<artifactId>spring-cloud-gcp-starter-sql-mysql</artifactId>
-		</dependency>
+             <groupId>com.google.cloud</groupId>
+             <artifactId>spring-cloud-gcp-starter-data-datastore</artifactId>
+        </dependency>
+        <dependency>
+             <groupId>org.springframework.shell</groupId>
+             <artifactId>spring-shell-starter</artifactId>
+             <version>2.0.0.RELEASE</version>
+        </dependency>
+        <dependency>
+      		<groupId>com.google.appengine</groupId>
+      		<artifactId>appengine-api-1.0-sdk</artifactId>
+      		<version>1.9.79</version>
+    	</dependency>
 	</dependencies>
 	<dependencyManagement>
 		<dependencies>
